--- a/syle.css
+++ b/syle.css
@@ -2,7 +2,7 @@ form{
     width: 500px;
     margin: auto;
     padding: 20px;
-    font-size: 30px;
+    font-size: 40px;
     font-family: vardana;
     background: #053853;
     color: white;
@@ -11,4 +11,23 @@ form{
 .inputs p {
     text-align: center;
 }
-input
+input[type=submit]{
+    padding: 7px;
+    font-size:20px;
+    width: 200px;
+    margin-left: 150px;
+    border: none;
+    border-radius: 50px;
+}
+.span{
+    margin-left: 10px;
+    font-size: 30px;
+}
+.inputs input{
+    width: 100px;
+    height: 30px;
+    border: none;
+    border-radius: 10px;
+    padding-left: 15px;
+    font-size: 20px;
+}
