--- a/syle.css
+++ b/syle.css
@@ -1,11 +1,27 @@
-form{
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.background{
+    height: 100vh;
+    width: 100%;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDjkvuMuap5mR4fHi1CpJZ3TDEnlqzUHbU5Z0VGB2nkYW4hBpQc0VxcLEuzn0OPg3m6Ag&usqp=CAU);
+    background-size: cover;
+    background-position: center;
+
+}
+
+
+.card{
     width: 500px;
-    margin: auto;
+    height: 400px;
     padding: 20px;
     font-size: 40px;
     font-family: vardana;
-    background: #053853;
-    color: white;
+    background: #859e63;
+    color: black;
     
 }
 .inputs p {
@@ -26,11 +42,23 @@ label{
     font-size: 30px;
 }
 .inputs input{
-    width: 100px;
-    height: 30px;
+    width: 120px;
+    height: 35px;
     border: none;
     border-radius: 10px;
     padding-left: 15px;
     font-size: 20px;
+    margin-left: 17px;
+    font-family:  sans-serif;
+    margin-top: 40px;
+    
 }
+.chuchu p {
+    margin-top: 35px;
+}
+.chuchu label{
+    margin-top: 20px;
+}
+
+
 
