--- a/syle.css
+++ b/syle.css
@@ -7,7 +7,7 @@
 .background{
     height: 100vh;
     width: 100%;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDjkvuMuap5mR4fHi1CpJZ3TDEnlqzUHbU5Z0VGB2nkYW4hBpQc0VxcLEuzn0OPg3m6Ag&usqp=CAU);
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScn0KfBSxq0HwFRIlnP8VeA37KFEbbQePS0Q&usqp=CAU);
     background-size: cover;
     background-position: center;
 
@@ -27,7 +27,7 @@
 .inputs p {
     text-align: center;
 }
-input[type=submit]{
+#btn {
     padding: 7px;
     font-size:20px;
     width: 200px;
@@ -59,6 +59,6 @@ label{
 .chuchu label{
     margin-top: 20px;
 }
-
+ 
 
 
