--- a/syle.css
+++ b/syle.css
@@ -7,7 +7,7 @@
 .background{
     height: 100vh;
     width: 100%;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScn0KfBSxq0HwFRIlnP8VeA37KFEbbQePS0Q&usqp=CAU);
+    background-image: url(https://static.vecteezy.com/system/resources/thumbnails/002/106/276/small/geometric-black-and-gold-background-free-vector.jpg);
     background-size: cover;
     background-position: center;
 
