--- a/syle.css
+++ b/syle.css
@@ -89,8 +89,23 @@ label{
 .name p{
     font-size: 60px;
     color: red;
-    
+
 }
+.footer-heading footer-1 {
+    padding-left: 20px;
+    margin-right: 50px;
+}
+.footer-heading footer-1 a{
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 0.5rem;
+}
+.footer-heading footer-1 a:hover{
+    color: red;
+    transition: 0.3 ease-out;
+}
+
+
  
 
 
